--- a/__devops__/docker/dockerfile.build.light
+++ b/__devops__/docker/dockerfile.build.light
@@ -1,21 +1,19 @@
-# image around 208 MB
+# image around 126 MB
 # build step
 FROM mhart/alpine-node:14 as build
 
-WORKDIR build
+COPY . build
 
-COPY package.json .
-
-RUN yarn
-
-COPY . .
-
-RUN yarn build
+RUN cd build && \
+    yarn && \
+    yarn build && \
+    rm -rf node_modules && \
+    yarn --prod
 
 # application environment
 FROM mhart/alpine-node:14
 
-ENV PROJECT_NAME=/project
+ARG PROJECT_NAME=/project
 
 WORKDIR $PROJECT_NAME
 
