--- a/__devops__/docker/dockerfile.build.light
+++ b/__devops__/docker/dockerfile.build.light
@@ -1,6 +1,7 @@
 # image around 126 MB
 # build step
-FROM mhart/alpine-node:14 as build
+ARG IMAGE=mhart/alpine-node:16
+FROM $IMAGE as build
 
 COPY . build
 
@@ -11,7 +12,7 @@ RUN cd build && \
     yarn --prod
 
 # application environment
-FROM mhart/alpine-node:14
+FROM $IMAGE
 
 ARG PROJECT_NAME=/project
 
