--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
         "pretest": "echo \"Nothing to execute before test\"",
         "test": "echo \"NODE_ENV=test && jest\"",
         "posttest": "",
-        "build": "tsc --build tsconfig.build.json"
+        "build": "tsc --build tsconfig.build.json",
+        "commit": "cz"
     },
     "devDependencies": {
         "@types/node": "^16.0.0",
+        "commitizen": "^4.2.4",
+        "cz-conventional-changelog": "3.3.0",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
     },
     "dependencies": {
         "dotenv": "^10.0.0"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
     }
 }
