--- a/package.json
+++ b/package.json
@@ -10,12 +10,20 @@
         "test": "echo \"NODE_ENV=test && jest\"",
         "posttest": "",
         "build": "tsc --build tsconfig.build.json",
+        "lint": "eslint --fix --ext ts .",
         "commit": "cz"
     },
     "devDependencies": {
         "@types/node": "^16.0.0",
+        "@typescript-eslint/eslint-plugin": "^4.31.1",
+        "@typescript-eslint/parser": "^4.31.1",
         "commitizen": "^4.2.4",
         "cz-conventional-changelog": "3.3.0",
+        "eslint": "^7.12.1",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.0.0",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
     },
