--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,14 +3,13 @@
         "browser": true,
         "es2021": true
     },
-    "extends": ["standard"],
+    "extends": ["standard", "prettier", "plugin:prettier/recommended"],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 12
     },
-    "plugins": ["@typescript-eslint"],
+    "plugins": ["@typescript-eslint", "prettier"],
     "rules": {
-        "indent": ["error", 4],
         "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": ["error"],
         "valid-jsdoc": "error"
