--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
         "commitizen": "^4.2.4",
         "cz-conventional-changelog": "3.3.0",
         "eslint": "^7.12.1",
+        "eslint-config-prettier": "^8.3.0",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-promise": "^5.0.0",
+        "prettier": "^2.4.1",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
     },
