--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "license": "MIT",
     "scripts": {
         "start:dev": "NODE_ENV=development && ts-node-dev --respawn --transpile-only src/index.ts",
-        "pretest": "echo \"Nothing to execute before test\"",
-        "test": "echo \"NODE_ENV=test && jest\"",
-        "posttest": "",
+        "test": "NODE_ENV=test && jest",
+        "test:cov": "NODE_ENV=test && jest --coverage",
         "build": "tsc --build tsconfig.build.json",
         "lint": "eslint --fix --ext ts .",
         "commit": "cz"
     },
     "devDependencies": {
+        "@types/jest": "^27.0.1",
         "@types/node": "^16.0.0",
         "@typescript-eslint/eslint-plugin": "^4.31.1",
         "@typescript-eslint/parser": "^4.31.1",
@@ -26,7 +26,9 @@
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-promise": "^5.0.0",
+        "jest": "^27.2.1",
         "prettier": "^2.4.1",
+        "ts-jest": "^27.0.5",
         "ts-node-dev": "^1.1.8",
         "typescript": "^4.3.5"
     },
