--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,9 +2,8 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "dist",
-        "removeComments": true,
+        "removeComments": true
     },
-    "include": [
-        "src"
-    ]
+    "include": ["src"],
+    "exclude": ["**/*.spec.ts"]
 }
