--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "start:dev": "NODE_ENV=development && ts-node-dev --respawn --transpile-only src/index.ts",
         "test": "NODE_ENV=test && jest",
         "test:cov": "NODE_ENV=test && jest --coverage",
-        "build": "tsc --build tsconfig.build.json",
+        "build": "rm -rf dist && tsc --build tsconfig.build.json",
         "lint": "eslint --fix --ext ts .",
         "commit": "cz"
     },
