--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "@typescript-eslint/eslint-plugin": "^4.31.1",
         "@typescript-eslint/parser": "^4.31.1",
         "commitizen": "^4.2.4",
-        "cz-conventional-changelog": "3.3.0",
+        "cz-conventional-changelog": "^3.0.1",
         "eslint": "^7.12.1",
         "eslint-config-prettier": "^8.3.0",
         "eslint-config-standard": "^16.0.3",
